Add kafka to sent message between service